--- a/src/index.html
+++ b/src/index.html
@@ -31,11 +31,26 @@
     <!-- **** Hero Section **** -->
     <section id="hero" class="jumbotron">
       <div class="container">
+        
         <h1 class="hero-title load-hidden">
-          Hi, my name is <span class="text-color-main">Mahmudul Rapi</span>
+          Hi! My name is <span class="text-color-main">Mahmudul Rapi</span>
           <br />
-          I'm an aspiring Software Engineer.
+          I'm an aspiring software engineer.
         </h1>
+
+        <div class="col-md-12 col-sm-12">
+          <div class="thumbnail rounded js-tilt about-wrapper__image load-hidden">
+            <img
+                  alt="Profile Image"
+                  class="img-fluid rounded shadow-lg"
+                  height="auto"
+                  width="350px"
+                  src="assets/pfp.jpg"
+                  alt="Profile Image"
+                />
+          </div>
+        </div>
+        <br>
         <p class="hero-cta load-hidden">
           <a rel="noreferrer" class="cta-btn cta-btn--hero" href="#about"
             >Know more</a
@@ -50,11 +65,11 @@
       <div class="container">
         <h2 class="section-title load-hidden">About me</h2>
         <div class="row about-wrapper">
-          <div class="col-md-6 col-sm-12">
+          <div class="col-md-4 col-sm-12">
             <div class="about-wrapper__image load-hidden">
               <img
                 alt="Profile Image"
-                class="img-fluid rounded shadow-lg"
+                class="rounded shadow-lg img-fluid"
                 height="auto"
                 width="300px"
                 src="assets/profile.jpg"
@@ -62,14 +77,19 @@
               />
             </div>
           </div>
-          <div class="col-md-6 col-sm-12">
+          <div class="col-md-8 col-sm-12">
             <div class="about-wrapper__info load-hidden">
               <p class="about-wrapper__info-text">
-                This is where you can describe about yourself. The more you
-                describe about yourself, the more chances you can!
+                I am a student at Princeton University (Class of 2024) studying <strong> Electrical & Computer Engineering </strong>
+                and pursuing a minor in <strong> Computer Science</strong> and <strong>Machine Learing</strong>. Outside of class, I am involved on
+                the Princeton Racing Electric Team and Princeton Rocketry Club. My work experience includes being a Course Grader, Closed Captions Editor,
+                and a Tutor. I am passionate about <strong> software engineering</strong> as a career, because I enjoy
+                programming, problem solving, and seeking impact through software and product development!
               </p>
+
               <p class="about-wrapper__info-text">
-                Extra Information about you! like hobbies and your goals.
+                Below are some of my projects
+                highlighting my programming skills and experience. 
               </p>
               <span class="d-flex mt-3">
                 <a
@@ -265,13 +285,22 @@
       <div class="container">
         <h2 class="section-title">Contact</h2>
         <div class="contact-wrapper load-hidden">
-          <p class="contact-wrapper__text">[Put your call to action here]</p>
+          <p class="contact-wrapper__text">Feel free to reach out to me!</p>
           <a
             rel="noreferrer"
             target="_blank"
             class="cta-btn cta-btn--resume"
-            href="mailto:example@email.com"
-            >Call to Action</a
+            href="mailto:mrapi@princeton.edu"
+            >Email</a
+          > <br>
+          <a
+            style="margin:10px;"
+            rel="noreferrer"
+            target="_blank"
+            class="cta-btn cta-btn--resume"
+            id = "contactN"
+            >
+            <h1 id = "phone_number">Cell Phone</h1></a
           >
         </div>
       </div>
@@ -285,13 +314,13 @@
           <i class="fa fa-angle-up fa-2x" aria-hidden="true"></i>
         </a>
         <div class="social-links">
-          <a rel="noreferrer" href="#!" target="_blank">
+          <a rel="noreferrer" href="https://www.instagram.com/mahmudul_rapi/" target="_blank">
             <i class="fa fa-instagram fa-inverse"></i>
           </a>
-          <a rel="noreferrer" href="#!" target="_blank">
+          <a rel="noreferrer" href="https://www.linkedin.com/in/mahmudul-rapi/" target="_blank">
             <i class="fa fa-linkedin fa-inverse"></i>
           </a>
-          <a rel="noreferrer" href="#!" target="_blank">
+          <a rel="noreferrer" href="https://github.com/mrapi00" target="_blank">
             <i class="fa fa-github fa-inverse"></i>
           </a>
         </div>
@@ -299,9 +328,18 @@
         <hr />
 
         <p class="footer__text">
-          © 2021 - Website developed by
+          © 2022 - 
           <a rel="noreferrer" href="https://github.com/mrapi00" target="_blank"
             >Mahmudul Rapi</a
+          >
+        </p>
+        <p class="footer__text">
+          Cell Number: (347) 679-5659
+        </p>
+
+        <p class="footer__text">
+          <a rel="noreferrer" href="mailto:mrapi@princeton.edu" target="_blank"
+            >Email: mrapi@princeton.edu</a
           >
         </p>
       </div>
