adding head navbar

--- a/src/index.html
+++ b/src/index.html
@@ -27,7 +27,24 @@
   <!-- Todo: read the following HTML Todos to create your stunning portfolio website -->
   <body>
     <div id="top"></div>
-
+    <nav class="navbar" id="navbar" role="navigation" aria-label="main navigation">
+      <span class="border-bottom">
+        <div class="navbar-end">
+          <div class="navbar-item">
+              <div class="buttons">
+                  <a class="hero-title nav-button" href="#about">Intro</a>
+                  <a class="hero-title nav-button" href="#work">Work</a>
+                  <a class="hero-title nav-button" href="#education" id="education-btn">Education</a>
+                  <a class="hero-title nav-button" href="#languages" id="languages-btn">Languages</a>
+                  <a class="hero-title nav-button" href="#projects" id="projects-btn">Projects</a>
+                  <a class="hero-title nav-button" href="#contact" id="contact-btn">Contact</a>
+                  <a class="hero-title nav-button" href="#extra" id="extra-btn">Extra</a>
+              </div>
+          </div>
+      </div>
+      </span>
+      
+    </nav>
     <!-- **** Hero Section **** -->
     <section id="hero" class="jumbotron">
       <div class="container">
