right aligning navbar

--- a/src/index.html
+++ b/src/index.html
@@ -24,24 +24,22 @@
     ></script>
   </head>
 
-  <!-- Todo: read the following HTML Todos to create your stunning portfolio website -->
   <body>
     <div id="top"></div>
     <nav class="navbar" id="navbar" role="navigation" aria-label="main navigation">
+      <ul class="navbar-nav"></ul>
       <span class="border-bottom">
         <div class="navbar-end">
           <div class="navbar-item">
-              <div class="buttons">
-                  <a class="hero-title nav-button" href="#about">Intro</a>
-                  <a class="hero-title nav-button" href="#work">Work</a>
-                  <a class="hero-title nav-button" href="#education" id="education-btn">Education</a>
-                  <a class="hero-title nav-button" href="#languages" id="languages-btn">Languages</a>
-                  <a class="hero-title nav-button" href="#projects" id="projects-btn">Projects</a>
-                  <a class="hero-title nav-button" href="#contact" id="contact-btn">Contact</a>
-                  <a class="hero-title nav-button" href="#extra" id="extra-btn">Extra</a>
+              <div class="buttons ">
+                  <a class="hero-title nav-button" href="#about">About</a>
+                  <a class="hero-title nav-button" href="#languages">Languages</a>
+                  <a class="hero-title nav-button" href="#projects">Projects</a>
+                  <a class="hero-title nav-button" href="#contact">Contact</a>
+                  <a class="hero-title nav-button" href="#socials">Extra</a>
               </div>
           </div>
-      </div>
+        </div>
       </span>
       
     </nav>
@@ -70,13 +68,12 @@
         <br>
         <p class="hero-cta load-hidden">
           <a rel="noreferrer" class="cta-btn cta-btn--hero" href="#about"
-            >Know more</a
+            >About Me</a
           >
         </p>
       </div>
     </section>
-    <!-- /END Hero Section -->
-
+  
     <!-- **** About Section **** -->
     <section id="about">
       <div class="container">
@@ -105,7 +102,7 @@
               </p>
 
               <p class="about-wrapper__info-text">
-                Below are some of my projects
+                Scrolling below are some of my projects
                 highlighting my programming skills and experience. 
               </p>
               <span class="d-flex mt-3">
@@ -116,6 +113,16 @@
                   href="assets/resume.pdf"
                 >
                   View Resume
+                </a>
+              </span>
+              <span class="d-flex mt-3">
+                <a
+                  rel="noreferrer"
+                  target="_blank"
+                  class="cta-btn cta-btn--resume"
+                  href="assets/transcript.pdf"
+                >
+                  View Transcript
                 </a>
               </span>
             </div>
@@ -325,27 +332,29 @@
     <!-- /END Contact Section -->
 
     <!-- **** Footer Section **** -->
-    <footer class="footer navbar-static-bottom">
+    <footer id = "socials" class="footer navbar-static-bottom">
       <div class="container">
         <a rel="noreferrer" href="#top" class="back-to-top">
           <i class="fa fa-angle-up fa-2x" aria-hidden="true"></i>
         </a>
         <div class="social-links">
-          <a rel="noreferrer" href="https://www.instagram.com/mahmudul_rapi/" target="_blank">
-            <i class="fa fa-instagram fa-inverse"></i>
-          </a>
           <a rel="noreferrer" href="https://www.linkedin.com/in/mahmudul-rapi/" target="_blank">
             <i class="fa fa-linkedin fa-inverse"></i>
           </a>
           <a rel="noreferrer" href="https://github.com/mrapi00" target="_blank">
             <i class="fa fa-github fa-inverse"></i>
           </a>
+          <a rel="noreferrer" href="https://www.facebook.com/people/Mahmudul-Rapi/100009525799061/" target="_blank">
+            <i class="fa fa-facebook fa-inverse"></i>
+          </a>
+          <a rel="noreferrer" href="https://www.instagram.com/mahmudul_rapi/" target="_blank">
+            <i class="fa fa-instagram fa-inverse"></i>
+          </a>
         </div>
 
         <hr />
-
         <p class="footer__text">
-          © 2022 - 
+          © 2022 - Website by
           <a rel="noreferrer" href="https://github.com/mrapi00" target="_blank"
             >Mahmudul Rapi</a
           >
