--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
     <link rel="shortcut icon" type="image/png" href="assets/favicon.png" />
 
     <!-- Todo: put here your site title -->
-    <title>Mahmudul Rapi | ECE Student</title>
+    <title>Mahmudul Rapi | Student</title>
     <!-- Todo: add some coding keywords below - e.g: (javascript, yourusername, etc) -->
     <meta name="keywords" content="[username], [name], skill" />
     <!-- Todo: improve your SEO by adding a small description of you -->
@@ -33,10 +33,10 @@
           <div class="navbar-item">
               <div class="buttons ">
                   <a class="hero-title nav-button" href="#about">About</a>
-                  <a class="hero-title nav-button" href="#languages">Languages</a>
                   <a class="hero-title nav-button" href="#projects">Projects</a>
+                  <a class="hero-title nav-button" href="#languages">Languages</a>
                   <a class="hero-title nav-button" href="#contact">Contact</a>
-                  <a class="hero-title nav-button" href="#socials">Extra</a>
+                  <a class="hero-title nav-button" href="#socials">Links</a>
               </div>
           </div>
         </div>
@@ -142,31 +142,21 @@
           <div class="row">
             <div class="col-lg-4 col-sm-12">
               <div class="project-wrapper__text load-hidden">
-                <h3 class="project-wrapper__text-title">Project Title 0</h3>
+                <h3 class="project-wrapper__text-title">Princeton University Computer (PUnC) Project</h3>
                 <div>
                   <p class="mb-4">
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                    Excepturi neque, ipsa animi maiores repellendus distinctio
-                    aperiam earum dolor voluptatum consequatur blanditiis
-                    inventore debitis fuga numquam voluptate ex architecto
-                    itaque molestiae.
+                    For my Digital Logic class, we were tasked with programming (in Verilog) a microprocessor that implements the LC3 
+                    instruction set, a 16-bit processor with a simple but versatile instruction set. This processor is Turing 
+                    complete and is a full-fledged stored program computer. 
                   </p>
                 </div>
                 <a
                   rel="noreferrer"
                   target="_blank"
                   class="cta-btn cta-btn--hero"
-                  href="#!"
+                  href="https://github.com/mrapi00/PUnC-LC3ISA_Computer"
                 >
-                  See Live
-                </a>
-                <a
-                  rel="noreferrer"
-                  target="_blank"
-                  class="cta-btn text-color-main"
-                  href="#!"
-                >
-                  Source Code
+                  Github Link
                 </a>
               </div>
             </div>
@@ -183,7 +173,7 @@
                     <img
                       alt="Project Image"
                       class="img-fluid"
-                      src="assets/project.jpg"
+                      src="assets/project1.png"
                     />
                   </div>
                 </a>
@@ -196,31 +186,22 @@
           <div class="row">
             <div class="col-lg-4 col-sm-12">
               <div class="project-wrapper__text load-hidden">
-                <h3 class="project-wrapper__text-title">Project Title 1</h3>
+                <h3 class="project-wrapper__text-title">Symbol Table Linked List and Hash Table Implementation</h3>
                 <div>
                   <p class="mb-4">
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                    Excepturi neque, ipsa animi maiores repellendus distinctio
-                    aperiam earum dolor voluptatum consequatur blanditiis
-                    inventore debitis fuga numquam voluptate ex architecto
-                    itaque molestiae.
+                    A symbol table is a fundamental data structure used for key-value pairs. In my systems programming
+                    class, I was tasked with implementing a symbol table in C with a linked list implementation and
+                    a resizing hash table (more efficient) implementation. Programming in C required carefullness
+                    with dynamically allocated memory.
                   </p>
                 </div>
                 <a
                   rel="noreferrer"
                   target="_blank"
                   class="cta-btn cta-btn--hero"
-                  href="#!"
+                  href="https://github.com/mrapi00/Symbol-Table"
                 >
-                  See Live
-                </a>
-                <a
-                  rel="noreferrer"
-                  target="_blank"
-                  class="cta-btn text-color-main"
-                  href="#!"
-                >
-                  Source Code
+                  Github Link
                 </a>
               </div>
             </div>
@@ -237,7 +218,7 @@
                     <img
                       alt="Project Image"
                       class="img-fluid"
-                      src="assets/project.jpg"
+                      src="assets/project2.png"
                     />
                   </div>
                 </a>
@@ -250,31 +231,25 @@
           <div class="row">
             <div class="col-lg-4 col-sm-12">
               <div class="project-wrapper__text load-hidden">
-                <h3 class="project-wrapper__text-title">Project Title 2</h3>
+                <h3 class="project-wrapper__text-title">Power Electronics Java Library</h3>
                 <div>
                   <p class="mb-4">
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                    Excepturi neque, ipsa animi maiores repellendus distinctio
-                    aperiam earum dolor voluptatum consequatur blanditiis
-                    inventore debitis fuga numquam voluptate ex architecto
-                    itaque molestiae.
+                    While taking a class in <a rel="noreferrer" href="https://registrar.princeton.edu/course-offerings/course-details?term=1222&courseid=014456" target="_blank"
+                    >Power Electronics</a>, I programmed my own power electronics library in Java containing 
+                    various power electronic topologies (diode-rectifier,
+                    buck converter, boost converter, flyback converter), user-interactive to ask for circuit parameters, 
+                    and computes the output current and output voltage, and ripple inductor current, ripple capacitor
+                    voltage, and peak switch voltage/currents (for design choice). I used my Java program to check that I used parameters 
+                    of the right values to meet design specifications. 
                   </p>
                 </div>
                 <a
                   rel="noreferrer"
                   target="_blank"
                   class="cta-btn cta-btn--hero"
-                  href="#!"
+                  href="https://github.com/mrapi00/Power-Electronics-Library"
                 >
-                  See Live
-                </a>
-                <a
-                  rel="noreferrer"
-                  target="_blank"
-                  class="cta-btn text-color-main"
-                  href="#!"
-                >
-                  Source Code
+                  Github Link
                 </a>
               </div>
             </div>
@@ -291,7 +266,7 @@
                     <img
                       alt="Project Image"
                       class="img-fluid"
-                      src="assets/project.jpg"
+                      src="assets/project3.gif"
                     />
                   </div>
                 </a>
