more project updates

--- a/src/index.html
+++ b/src/index.html
@@ -136,7 +136,7 @@
     <section id="projects">
       <div class="container">
         <div class="project-wrapper">
-          <h2 class="section-title dark-blue-text">Projects</h2>
+          <h2 class="section-title dark-blue-text">Programming Projects</h2>
 
           <!-- Notice: each .row is a project -->
           <div class="row">
@@ -145,9 +145,11 @@
                 <h3 class="project-wrapper__text-title">Princeton University Computer (PUnC) Project</h3>
                 <div>
                   <p class="mb-4">
-                    For my Digital Logic class, we were tasked with programming (in Verilog) a microprocessor that implements the LC3 
+                    For my Digital Logic class, we were tasked with programming a microprocessor in <strong> Verilog </strong>that implements the LC3 
                     instruction set, a 16-bit processor with a simple but versatile instruction set. This processor is Turing 
-                    complete and is a full-fledged stored program computer. 
+                    complete and is a full-fledged stored program computer. A description of the assembly functions my computer implements
+                    can be found <a rel="noreferrer" href="assets/LC3ISA.pdf" target="_blank"
+                    >here</a>. 
                   </p>
                 </div>
                 <a
@@ -190,7 +192,7 @@
                 <div>
                   <p class="mb-4">
                     A symbol table is a fundamental data structure used for key-value pairs. In my systems programming
-                    class, I was tasked with implementing a symbol table in C with a linked list implementation and
+                    class, I was tasked with implementing a symbol table in <strong>C</strong> with a linked list implementation and
                     a resizing hash table (more efficient) implementation. Programming in C required carefullness
                     with dynamically allocated memory.
                   </p>
@@ -235,7 +237,7 @@
                 <div>
                   <p class="mb-4">
                     While taking a class in <a rel="noreferrer" href="https://registrar.princeton.edu/course-offerings/course-details?term=1222&courseid=014456" target="_blank"
-                    >Power Electronics</a>, I programmed my own power electronics library in Java containing 
+                    >Power Electronics</a>, I programmed my own power electronics library in <strong>Java</strong> containing 
                     various power electronic topologies (diode-rectifier,
                     buck converter, boost converter, flyback converter), user-interactive to ask for circuit parameters, 
                     and computes the output current and output voltage, and ripple inductor current, ripple capacitor
@@ -267,6 +269,98 @@
                       alt="Project Image"
                       class="img-fluid"
                       src="assets/project3.gif"
+                    />
+                  </div>
+                </a>
+              </div>
+            </div>
+          </div>
+          <!-- /END Project -->
+
+          <!-- Notice: each .row is a project -->
+          <div class="row">
+            <div class="col-lg-4 col-sm-12">
+              <div class="project-wrapper__text load-hidden">
+                <h3 class="project-wrapper__text-title">Seam Carving Project</h3>
+                <div>
+                  <p class="mb-4">
+                    I learned to implement seam carving in my data structures and algorithms class, 
+                    programmed <strong>Java</strong>. 
+                    Seam-carving is a content-aware image resizing technique where 
+                    the image is reduced in size by one pixel of height (or width) at a time. 
+                    Unlike scaling or cropping, seam carving preserves the most interest features
+                    of the image. The project implements dynamic programming and backtracking to find
+                    the seam which can be removed. 
+                  </p>
+                </div>
+                <a
+                  rel="noreferrer"
+                  target="_blank"
+                  class="cta-btn cta-btn--hero"
+                  href="https://github.com/mrapi00/Seam-Carving"
+                >
+                  Github Link
+                </a>
+              </div>
+            </div>
+            <div class="col-lg-8 col-sm-12">
+              <div class="project-wrapper__image load-hidden">
+                <a rel="noreferrer" href="#!" target="_blank">
+                  <div
+                    data-tilt
+                    data-tilt-max="4"
+                    data-tilt-glare="true"
+                    data-tilt-max-glare="0.5"
+                    class="thumbnail rounded js-tilt"
+                  >
+                    <img
+                      alt="Project Image"
+                      class="img-fluid"
+                      src="assets/project5.png"
+                    />
+                  </div>
+                </a>
+              </div>
+            </div>
+          </div>
+          <!-- /END Project -->
+
+          <!-- Notice: each .row is a project -->
+          <div class="row">
+            <div class="col-lg-4 col-sm-12">
+              <div class="project-wrapper__text load-hidden">
+                <h3 class="project-wrapper__text-title">My Personal Website</h3>
+                <div>
+                  <p class="mb-4">
+                    You're looking at it right now! My personal website is coded in <strong>HTML, CSS, 
+                    Javascript, Bootstrap and Node.js</strong>  packages. It contains information about me, my 
+                    resume, projects, socials, and contact information.
+                  </p>
+                </div>
+                <a
+                  rel="noreferrer"
+                  target="_blank"
+                  class="cta-btn cta-btn--hero"
+                  href="https://github.com/mrapi00/Personal-Website"
+                >
+                  Github Link
+                </a>
+              </div>
+            </div>
+            <div class="col-lg-8 col-sm-12">
+              <div class="project-wrapper__image load-hidden">
+                <a rel="noreferrer" href="#!" target="_blank">
+                  <div
+                    data-tilt
+                    data-tilt-max="4"
+                    data-tilt-glare="true"
+                    data-tilt-max-glare="0.5"
+                    class="thumbnail rounded js-tilt"
+                  >
+                    <img
+                      alt="Project Image"
+                      class="img-fluid"
+                      src="assets/project4.png"
                     />
                   </div>
                 </a>
