--- a/src/index.html
+++ b/src/index.html
@@ -373,6 +373,35 @@
     </section>
     <!-- /END Projects Section -->
 
+    <!-- **** Languages Section **** -->
+    <section id="languages">
+      <div class="container">
+        <h2 class="section-title load-hidden">Programming Languages</h2>
+        <div class="row about-wrapper">
+          <div class="col-md-4 col-sm-12">
+            <div class="about-wrapper__image load-hidden">
+              <img
+                alt="Profile Image"
+                class="rounded shadow-lg img-fluid"
+                height="auto"
+                width="500px"
+                src="assets/pl1.jfif"
+                alt="Profile Image"
+              />
+            </div>
+          </div>
+          <div class="col-md-8 col-sm-12">
+            <div class="about-wrapper__info load-hidden">
+              <p class="about-wrapper__info-text">
+                Skills: Java, C, Python, HTML, CSS, Javascript, R/RStudio, Git/Github, Microsoft Excel, Verilog
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- /END About Section -->
+
     <!-- **** Contact Section **** -->
     <section id="contact">
       <div class="container">
