--- a/src/index.html
+++ b/src/index.html
@@ -48,7 +48,7 @@
       <div class="container">
         
         <h1 class="hero-title load-hidden">
-          Hi! My name is <span class="text-color-main">Mahmudul Rapi</span>
+          Hi! My name is <span class="text-color-main">Mahmudul Rapi.</span>
           <br />
           I'm an aspiring software engineer.
         </h1>
