--- a/src/index.html
+++ b/src/index.html
@@ -193,7 +193,7 @@
                   <p class="mb-4">
                     A symbol table is a fundamental data structure used for key-value pairs. In my systems programming
                     class, I was tasked with implementing a symbol table in <strong>C</strong> with a linked list implementation and
-                    a resizing hash table (more efficient) implementation. Programming in C required carefullness
+                    a resizing hash table (more efficient) implementation. Programming in C required carefulness
                     with dynamically allocated memory.
                   </p>
                 </div>
