--- a/src/index.html
+++ b/src/index.html
@@ -288,7 +288,7 @@
                     programmed <strong>Java</strong>. 
                     Seam-carving is a content-aware image resizing technique where 
                     the image is reduced in size by one pixel of height (or width) at a time. 
-                    Unlike scaling or cropping, seam carving preserves the most interest features
+                    Unlike scaling or cropping, seam carving preserves the most important features
                     of the image. The project implements dynamic programming and backtracking to find
                     the seam which can be removed. 
                   </p>
