--- a/src/index.html
+++ b/src/index.html
@@ -241,8 +241,8 @@
                     various power electronic topologies (diode-rectifier,
                     buck converter, boost converter, flyback converter), user-interactive to ask for circuit parameters, 
                     and computes the output current and output voltage, and ripple inductor current, ripple capacitor
-                    voltage, and peak switch voltage/currents (for design choice). I used my Java program to check that I used parameters 
-                    of the right values to meet design specifications. 
+                    voltage, and peak switch voltage/currents (for design choice). In the final design project for this class,
+                    I used my Java program to check that I used parameters of the right values to meet design specifications. 
                   </p>
                 </div>
                 <a
