--- a/src/index.html
+++ b/src/index.html
@@ -145,7 +145,7 @@
                 <div>
                   <p class="mb-4">
                     You're looking at it right now! My personal website is programmed in <strong>HTML, CSS, 
-                    Javascript, Bootstrap and Node.js</strong>  packages. It contains information about me, my 
+                    Javascript, and Bootstrap</strong>. It contains information about me, my 
                     resume, projects, socials, and contact information.
                   </p>
                 </div>
