--- a/src/index.html
+++ b/src/index.html
@@ -279,8 +279,7 @@
                 <h3 class="project-wrapper__text-title">Power Electronics Java Library</h3>
                 <div>
                   <p class="mb-4">
-                    While taking a class in <a rel="noreferrer" href="https://registrar.princeton.edu/course-offerings/course-details?term=1222&courseid=014456" target="_blank"
-                    >Power Electronics</a>, I programmed my own power electronics library in <strong>Java</strong> containing 
+                    While taking a class in Power Electronics, I programmed my own power electronics library in <strong>Java</strong> containing 
                     various power electronic topologies (diode-rectifier,
                     buck converter, boost converter, flyback converter), user-interactive to ask for circuit parameters, 
                     and computes the output current and output voltage, and ripple inductor current, ripple capacitor
