--- a/src/index.html
+++ b/src/index.html
@@ -94,8 +94,8 @@
           <div class="col-md-8 col-sm-12">
             <div class="about-wrapper__info load-hidden">
               <p class="about-wrapper__info-text">
-                I am a sophomore at Princeton University studying <strong> Electrical & Computer Engineering </strong>
-                and pursuing a minor in <strong> Computer Science</strong> and <strong>Machine Learning</strong>. Outside of class, I am involved on
+                I am a sophomore at Princeton University studying <strong> Computer Science </strong>
+                and pursuing a minor in <strong> Statistics and Machine Learning</strong>. Outside of class, I am involved on
                 the Princeton Racing Electric Team and Princeton Rocketry Club. My work experience includes being a Course Grader, Closed Captions Editor,
                 and a Tutor. I am passionate about <strong> software engineering</strong> as a career, because I enjoy
                 programming, problem solving, and seeking impact through software and product development!
