--- a/src/index.html
+++ b/src/index.html
@@ -34,6 +34,7 @@
               <div class="buttons ">
                   <a class="hero-title nav-button" href="#about">About</a>
                   <a class="hero-title nav-button" href="#projects">Projects</a>
+                  <a class="hero-title nav-button" href="#coursework">Coursework</a>
                   <a class="hero-title nav-button" href="#languages">Languages</a>
                   <a class="hero-title nav-button" href="#contact">Contact</a>
                   <a class="hero-title nav-button" href="#socials">Links</a>
@@ -371,6 +372,29 @@
     </section>
     <!-- /END Projects Section -->
 
+    <!-- **** Coursework Section **** -->
+    <section id="coursework">
+      <div class="container">
+        <h2 class="section-title load-hidden">Coursework</h2>
+        <div class="row about-wrapper">
+          <div class="col-md-12 col-sm-12">
+            <div class="about-wrapper__info load-hidden" >
+              <p class="about-wrapper__info-text" style="line-height: 3;">
+                <strong>COS226 </strong> Algorithms and Data Structures <br>
+                <strong>COS217 </strong> Systems Programming <br>
+                <strong>COS324 </strong> Machine Learning <br>
+                <strong>COS316 </strong> Principles of Computer System Design <br>
+                <strong>COS306 </strong> Contemporary Logic Design <br>
+                <strong>COS240 </strong> Discrete Mathematics <br>
+                <strong>COS126 </strong> Introductory Java Programming <br>
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- /END Coursework Section -->
+
     <!-- **** Languages Section **** -->
     <section id="languages">
       <div class="container">
@@ -391,7 +415,7 @@
           <div class="col-md-8 col-sm-12">
             <div class="about-wrapper__info load-hidden">
               <p class="about-wrapper__info-text">
-                Skills: Java, C, Python, HTML, CSS, Javascript, R/RStudio, Git/Github, Microsoft Excel, Verilog
+                Java, C, Python, HTML, CSS, Javascript, R/RStudio, Git/Github, Microsoft Excel, Verilog
               </p>
             </div>
           </div>
