--- a/src/index.html
+++ b/src/index.html
@@ -380,13 +380,13 @@
           <div class="col-md-12 col-sm-12">
             <div class="about-wrapper__info load-hidden" >
               <p class="about-wrapper__info-text" style="line-height: 3;">
-                <strong>COS226 </strong> Algorithms and Data Structures <br>
-                <strong>COS217 </strong> Systems Programming <br>
-                <strong>COS324 </strong> Machine Learning <br>
-                <strong>COS316 </strong> Principles of Computer System Design <br>
-                <strong>COS306 </strong> Contemporary Logic Design <br>
+                <strong>COS226 </strong> Algorithms and Data Structures (Java)<br>
+                <strong>COS217 </strong> Systems Programming (C, x86 Assembly)<br>
+                <strong>COS324 </strong> Intro Machine Learning (Python)<br>
+                <strong>COS316 </strong> Computer System Design (Go)<br>
+                <strong>COS306 </strong> Contemporary Logic Design (Verilog)<br>
                 <strong>COS240 </strong> Discrete Mathematics <br>
-                <strong>COS126 </strong> Introductory Java Programming <br>
+                <strong>COS126 </strong> Introductory Java Programming (Java)<br>
               </p>
             </div>
           </div>
