--- a/src/index.html
+++ b/src/index.html
@@ -379,7 +379,7 @@
         <div class="row about-wrapper">
           <div class="col-md-12 col-sm-12">
             <div class="about-wrapper__info load-hidden" >
-              <p class="about-wrapper__info-text" style="line-height: 3;">
+              <p class="about-wrapper__info-text" style="line-height: 3; display: inline-block; text-align: left">
                 <strong>COS226 </strong> Algorithms and Data Structures (Java)<br>
                 <strong>COS217 </strong> Systems Programming (C, x86 Assembly)<br>
                 <strong>COS324 </strong> Intro Machine Learning (Python)<br>
