--- a/src/index.html
+++ b/src/index.html
@@ -383,7 +383,7 @@
                 <strong>COS226 </strong> Algorithms and Data Structures (Java)<br>
                 <strong>COS217 </strong> Systems Programming (C, x86 Assembly)<br>
                 <strong>COS324 </strong> Intro Machine Learning (Python)<br>
-                <strong>COS316 </strong> Computer System Design (Go)<br>
+                <strong>COS333 </strong> Full-Stack Programming Techniques (Python, SQL, HTML, CSS, Javascript)<br>
                 <strong>COS306 </strong> Contemporary Logic Design (Verilog)<br>
                 <strong>COS240 </strong> Discrete Mathematics <br>
                 <strong>COS126 </strong> Introductory Java Programming (Java)<br>
