--- a/src/index.html
+++ b/src/index.html
@@ -51,7 +51,7 @@
         <h1 class="hero-title load-hidden">
           Hi! My name is <span class="text-color-main">Mahmudul Rapi.</span>
           <br />
-          I'm an aspiring software engineer.
+          I'm a Computer Science student and aspiring Software Engineer.
         </h1>
 
         <div class="col-md-12 col-sm-6">
@@ -81,7 +81,7 @@
         <h2 class="section-title load-hidden">About me</h2>
         <div class="row about-wrapper">
           <div class="col-md-4 col-sm-12">
-            <div class="about-wrapper__image load-hidden">
+            <div class="about-wrapper__image js-tilt load-hidden">
               <img
                 alt="Profile Image"
                 class="rounded shadow-lg img-fluid"
@@ -95,11 +95,18 @@
           <div class="col-md-8 col-sm-12">
             <div class="about-wrapper__info load-hidden">
               <p class="about-wrapper__info-text">
-                I am a sophomore at Princeton University studying <strong> Computer Science </strong>
-                and pursuing a minor in <strong> Statistics and Machine Learning</strong>. Outside of class, I am involved on
-                the Princeton Racing Electric Team and Princeton Rocketry Club. My work experience includes being a Course Grader, Closed Captions Editor,
-                and a Tutor. I am passionate about <strong> software engineering</strong> as a career, because I enjoy
-                programming, problem solving, and seeking impact through software and product development!
+                My name is Mahmudul and I'm from NYC!
+              </p>
+              <p class="about-wrapper__info-text">
+                I'm a sophomore at Princeton University studying <strong> Computer Science </strong>
+                and pursuing a minor in <strong> Statistics and Machine Learning</strong>. On campus, I'm involved as a 
+                <em>software engineer</em> on The Daily Princetonian (school newspaper), and <em>software subteam lead</em> on 
+                Princeton Rocketry Club. My relevant work experience includes being a <em>Software Developer Research Assistant</em> at 
+                Princeton's Intelligence and Adaptation Lab, an <em>Algorithms & Data Structures Grader</em> for 
+                Princeton's Computer Science Department, and <em> a Data and Program Evaluation Intern </em> at the Centers
+                for Disease Control and Prevention (CDC).
+                I am passionate about <strong> software engineering</strong> as a career, because I love programming, problem solving, 
+                and creating an impact through software development!
               </p>
 
               <p class="about-wrapper__info-text">
@@ -385,9 +392,10 @@
                 <strong>COS226 </strong> Algorithms and Data Structures (Java)<br>
                 <strong>COS217 </strong> Systems Programming (C, x86 Assembly)<br>
                 <strong>COS306 </strong> Contemporary Logic Design (Verilog)<br>
-                <strong>COS240 </strong> Discrete Mathematics <br>
+                <strong>COS240 </strong> Discrete Mathematics (LaTeX)<br>
                 <strong>COS126 </strong> Introductory Java Programming (Java)<br>
               </p>
+              
             </div>
           </div>
         </div>
@@ -414,8 +422,8 @@
           </div>
           <div class="col-md-8 col-sm-12">
             <div class="about-wrapper__info load-hidden">
-              <p class="about-wrapper__info-text">
-                Java, C, Python, HTML, CSS, Javascript, R/RStudio, Git/Github, Microsoft Excel, Verilog
+              <p class="about-wrapper__info-text" style=" text-align: left">
+                Languages: Java, C, Python, SQL, HTML, CSS, Javascript, R, Git/Github, Verilog, Microsoft Excel <br>
               </p>
             </div>
           </div>
