change to profile

--- a/src/index.html
+++ b/src/index.html
@@ -51,7 +51,7 @@
         <h1 class="hero-title load-hidden">
           Hi! My name is <span class="text-color-main">Mahmudul Rapi.</span>
           <br />
-          I'm a Computer Science student and aspiring Software Engineer.
+          I'm an aspiring Software Engineer.
         </h1>
 
         <div class="col-md-12 col-sm-6">
